--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.8.3",
     "vue": "^3.5.13",
     "vue-i18n": "^9.14.3",
-    "vue-router": "^4.5.0",
-    "vue-toastification": "^1.7.14"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
