--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,6 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173
 # Database settings
 DB_NAME=quran_khatmah
 DB_USER=super
-DB_PASSWORD=your_password_here
+DB_PASSWORD=Hamood12k12
 DB_HOST=Sh3ewit-4454.postgres.pythonanywhere-services.com
 DB_PORT=14454
